# pycraf

./: .buildinfo  .doctr-files  .gitattributes  .gitignore  .rtd-environment.yml  .travis.yml  CHANGES.rst  MANIFEST.in  README.md  README.rst  ah_bootstrap.py  appveyor.yml  azure-pipelines.yml  check_rst.sed  environment-dev.yaml  genindex.html  github_deploy_key.enc  importing_pycraf.html  index.html  index_acknowledgements.html  index_getting_started.html  index_project_details.html  index_user_guide.html  install.html  license.html  objects.inv  pip-requirements  pip-requirements-dev  pip-requirements.tests  py-modindex.html  pyproject.toml  retry.sh  search.html  searchindex.js  setup.cfg  setup.py
.ci/: build-wheels.sh
.doctrees/: importing_pycraf.doctree  index.doctree  index_acknowledgements.doctree  index_project_details.doctree  index_user_guide.doctree  install.doctree  license.doctree
.doctrees/antenna/: index.doctree
.doctrees/api/: pycraf.UnsupportedPythonError.doctree  pycraf.antenna.fl_G_max_from_hpbw.doctree  pycraf.antenna.fl_G_max_from_size.doctree  pycraf.antenna.fl_hpbw_from_size.doctree  pycraf.antenna.fl_pattern.doctree  pycraf.antenna.imt2020_composite_pattern.doctree  pycraf.antenna.imt2020_composite_pattern_extended.doctree  pycraf.antenna.imt2020_single_element_pattern.doctree  pycraf.antenna.imt_advanced_sectoral_avg_sidelobe_pattern_400_to_6000_mhz.doctree  pycraf.antenna.imt_advanced_sectoral_peak_sidelobe_pattern_400_to_6000_mhz.doctree  pycraf.antenna.ras_pattern.doctree  pycraf.atm.airmass_from_elevation.doctree  pycraf.atm.atm_layers.doctree  pycraf.atm.atten_from_opacity.doctree  pycraf.atm.atten_slant_annex1.doctree  pycraf.atm.atten_slant_annex2.doctree  pycraf.atm.atten_specific_annex2.doctree  pycraf.atm.atten_terrestrial.doctree  pycraf.atm.elevation_from_airmass.doctree  pycraf.atm.equivalent_height_dry.doctree  pycraf.atm.equivalent_height_wet.doctree  pycraf.atm.find_elevation.doctree  pycraf.atm.humidity_from_pressure_water.doctree  pycraf.atm.opacity_from_atten.doctree  pycraf.atm.path_endpoint.doctree  pycraf.atm.pressure_water_from_humidity.doctree  pycraf.atm.pressure_water_from_rho_water.doctree  pycraf.atm.profile_highlat_summer.doctree  pycraf.atm.profile_highlat_winter.doctree  pycraf.atm.profile_lowlat.doctree  pycraf.atm.profile_midlat_summer.doctree  pycraf.atm.profile_midlat_winter.doctree  pycraf.atm.profile_standard.doctree  pycraf.atm.raytrace_path.doctree  pycraf.atm.refractive_index.doctree  pycraf.atm.rho_water_from_pressure_water.doctree  (+109 more)
_modules/: index.html  pycraf.html
_sources/: importing_pycraf.rst.txt  index.rst.txt  index_acknowledgements.rst.txt  index_getting_started.rst.txt  install.rst.txt
antenna/: index-1.py  index-3.py  index.html
api/: pycraf-pathprof-building_entry_loss-1.py  pycraf-pathprof-building_entry_loss-2.py  pycraf.UnsupportedPythonError.html  pycraf.antenna.fl_G_max_from_hpbw.html  pycraf.antenna.fl_G_max_from_size.html  pycraf.antenna.fl_hpbw_from_size.html  pycraf.antenna.fl_pattern.html  pycraf.antenna.imt2020_composite_pattern.html  pycraf.antenna.imt2020_composite_pattern_extended.html  pycraf.antenna.imt2020_single_element_pattern.html  pycraf.antenna.imt_advanced_sectoral_avg_sidelobe_pattern_400_to_6000_mhz.html  pycraf.antenna.imt_advanced_sectoral_peak_sidelobe_pattern_400_to_6000_mhz.html  pycraf.antenna.ras_pattern.html  pycraf.atm.airmass_from_elevation.html  pycraf.atm.atm_layers.html  pycraf.atm.atten_from_opacity.html  pycraf.atm.atten_slant_annex1.html  pycraf.atm.atten_slant_annex2.html  pycraf.atm.atten_specific_annex1.html  pycraf.atm.atten_specific_annex2.html  pycraf.atm.atten_terrestrial.html  pycraf.atm.elevation_from_airmass.html  pycraf.atm.equivalent_height_dry.html  pycraf.atm.equivalent_height_wet.html  pycraf.atm.find_elevation.html  pycraf.atm.humidity_from_pressure_water.html  pycraf.atm.opacity_from_atten.html  pycraf.atm.path_endpoint.html  pycraf.atm.pressure_water_from_humidity.html  pycraf.atm.pressure_water_from_rho_water.html  pycraf.atm.profile_highlat_summer.html  pycraf.atm.profile_highlat_winter.html  pycraf.atm.profile_lowlat.html  pycraf.atm.profile_midlat_summer.html  pycraf.atm.profile_midlat_winter.html  pycraf.atm.profile_standard.html  pycraf.atm.raytrace_path.html  pycraf.atm.refractive_index.html  pycraf.atm.rho_water_from_pressure_water.html  pycraf.atm.saturation_water_pressure.html  (+117 more)
atm/: index-3.py  index-4.py  index.html
conda-forge-recipe/: bld.bat  meta.yaml
conversions/: index.html
docs/: antenna.rst  atm.rst  conf.py  geometry.rst  geospatial.rst  gui.rst  importing_pycraf.rst  index.rst  index_user_guide.rst  install.rst  license.rst  mc.rst  pathprof.rst  protection.rst  satellite.rst  utils.rst  working_with_srtm.rst
docs/atm/: index.rst
examples/: README.txt
geometry/: index.html
geospatial/: index.html
gui/: index.html
latest/: .buildinfo  .doctr-files  genindex.html  importing_pycraf.html  index.html  index_acknowledgements.html  index_getting_started.html  index_project_details.html  index_user_guide.html  install.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
licenses/: COPERNICUS.EU  LICENSE.ITU  README.rst
mc/: index.html
notebooks/: 01_conversions.ipynb  02_atmospheric_attenuation.ipynb  03a_path_propagation_basic.ipynb  03b_path_propagation_generic.ipynb  03c_attenuation_maps.ipynb  03d_more_on_srtm_data.ipynb  03e_parameter_dependence.ipynb  03f_pre+postprocessing.ipynb  03g_pre+postprocessing.ipynb  03h_radial_attenuation.ipynb  04a_satellites_plot.ipynb  05_rotated_antenna_patterns.ipynb  A01_case_study_fixed_link.ipynb  B01_wind_turbine_generic.ipynb  B02_wind_turbine_terrain.ipynb  B03_wind_turbine_reflection.ipynb  C01_case_study_imt_spurious_generic.ipynb  README.rst  tmp.ipynb
pathprof/: download_srtm.html  index-1.py  index-2.py  index-3.py  index-4.py  index-5.py  index.html  working_with_srtm.html
protection/: index.html
pycraf/: __init__.py  conftest.py  init_testrunner.py
satellite/: index.html
src/: __init__.py
utils/: index.html
(+994 files in other folders)
