[build-system]
requires = [
    "setuptools>=30.3.0",
    "setuptools_scm>=6.2",
    "wheel",
    "cython>=0.29",
    "numpy==1.13.1; python_version<'3.7'",
    "numpy==1.14.5; python_version=='3.7'",
    "numpy==1.18.1; python_version=='3.8'",
    "numpy==1.20.0; python_version=='3.9'",
    "numpy==1.22.0; python_version=='3.10'",
    # "oldest-supported-numpy",
    "extension-helpers",
    ]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "pycraf/version.py"

# [tool.pytest.ini_options]
# minversion = "6.0"
# addopts = '-rsx --doctest-rst  --doctest-modules --ignore-glob="*/setup_package.py"'
# testpaths = [
#     "pycraf",
#     "docs",
# ]
