[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings
qt_api = pyqt5
qt_default_raising = false

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py

[pycodestyle]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py

[metadata]
description-file = README.rst
package_name = pycraf
description = pycraf
long_description =
author = Benjamin Winkel
author_email = bwinkel@mpifr.de
license = GPL v3
url = https://github.com/bwinkel/pycraf
edit_on_github = True
github_project = bwinkel/pycraf
# install_requires should be formatted as a comma-separated list, e.g.:
# install_requires = astropy, scipy, matplotlib
install_requires = astropy, scipy, matplotlib
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 1.1.0
minimum_python_version = 3.6

[entry_points]

# astropy-package-template-example = pycraf.example_mod:main

[entry_points_gui]

pycraf-gui = pycraf.gui.__main__:main
