[build_sphinx]
source_dir = docs
build_dir = docs/_build
all_files = 1

[build_docs]
source_dir = docs
build_dir = docs/_build
all_files = 1

[upload_docs]
upload_dir = docs/_build/html
show_response = 1

[tool:pytest]
# # minversion = 3.0
# # norecursedirs = build docs/_build
# # doctest_plus = enabled
# # addopts = -p no:warnings
# # qt_api = pyqt5
# # qt_default_raising = false
# # doctest_norecursedirs =
# #     */setup_package.py
# #     */create_viewpano_npy.py
# # minversion = 7.0
#
# testpaths = "pycraf" "docs"
# norecursedirs = "docs[\/]_build" "docs[\/]generated" "build"
# astropy_header = true
# doctest_plus = enabled
# text_file_format = rst
# doctest_rst = true
#
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
filterwarnings = ignore::pytest.PytestUnknownMarkWarning
addopts = -p no:warnings
doctest_optionflags =
    NORMALIZE_WHITESPACE
    ELLIPSIS
    FLOAT_CMP

# [ah_bootstrap]
# auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py

[pycodestyle]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py

[metadata]
name = pycraf
package_name = pycraf
author = Benjamin Winkel
author_email = bwinkel@mpifr.de
license = GPL v3
license_files =
    licenses/*
url = https://github.com/bwinkel/pycraf
project_urls =
    Documentation = https://bwinkel.github.io/pycraf/latest/
    Source = https://github.com/bwinkel/pycraf
description = pycraf - compatibility studies for radio astronomy spectrum management
long_description = file: README.rst
keywords = astronomy, astrophysics, radio astronomy, spectrum management, compatibility studies
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: GIS
minimum_python_version = 3.9
edit_on_github = True
github_project = bwinkel/pycraf
# description-file = README.rst
# name = pycraf
# package_name = pycraf
# description = pycraf
# long_description =
# author = Benjamin Winkel
# author_email = bwinkel@mpifr.de
# license = GPL v3
# license_file = licenses/README.rst
# url = https://github.com/bwinkel/pycraf
# # install_requires should be formatted as a comma-separated list, e.g.:
# # install_requires = astropy, scipy, matplotlib
# install_requires = astropy, scipy, matplotlib
# # version should be PEP440 compatible (https://www.python.org/dev/peps/# pep-0440/)
# version = 1.1.2.dev

[entry_points]

# astropy-package-template-example = pycraf.example_mod:main

[entry_points_gui]

# pycraf-gui = pycraf.gui.__main__:main

[options]
# We set packages to find: to automatically find all sub-packages
packages = find:
zip_safe = False
tests_require = pytest-astropy
# install_requires =
#     numpy
#     cython
#     packaging
python_requires = >=3.9

[options.packages.find]
# exclude = astropy._dev

[options.extras_require]
test =  # Required to run the astropy test suite.
    pytest
    pytest-doctestplus
    pytest-astropy
recommended =
    astropy
    h5py
    matplotlib
    pyproj
    scipy
    sgp4>2
all =
    astropy
    h5py
    matplotlib
    # cython  # already install by build system
    # numpy  # already install by build system
    pyproj
    pytest
    pytest-astropy
    pytest-doctestplus
    rasterio
    scipy
    sgp4>2
    # twine  # should be done in ci/cd
    # wheel  # should be done in ci/cd
docs =
    sphinx
    sphinx-astropy
    pytest
    pyproj
    scipy
    matplotlib
    sgp4>2

[options.package_data]
* = data/*, data/*/*, data/*/*/*, data/*/*/*/*, data/*/*/*/*/*, data/*/*/*/*/*/*, itudata/*, itudata/*/*, itudata/*/*/*, itudata/*/*/*/*, corine/*, geolib/*, pp/*
pycraf = CITATION
astropy.antenna = *.c
astropy.atm = *.c
astropy.geometry = *.c
astropy.pathprof = *.c
